incubator/003-scc-and-caps/config/pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: poc-003
  labels:
    app: poc-003
  annotations:
    openshift.io/scc: poc-003
spec:
  serviceAccountName: poc-003
  # dnsConfig:
  #   nameservers:
  #     - 127.0.0.1
  # hostAliases:
  #   - ip: "127.0.0.1"
  #     hostnames:
  #       - poc-003.apps.permanent.idmocp.lab.eng.rdu2.redhat.com
  #       - apps.permanent.idmocp.lab.eng.rdu2.redhat.com
  containers:
    - name: main
      image: quay.io/avisied0/freeipa-openshift-container:poc-003
      resources:
        limits:
          cpu: 4000m
          memory: 4Gi
        requests:
          cpu: 2000m
          memory: 3Gi
      securityContext:
        privileged: false
        capabilities:
          drop:
            # Default capabilities anyuid
            - "FSETID"
            - "NET_RAW"
            - "SYS_CHROOT"

            # No default capabilities
            - "AUDIT_CONTROL"
            - "AUDIT_READ"
            - "BLOCK_SUSPEND"
            - "DAC_READ_SEARCH"
            - "IPC_LOCK"
            - "IPC_OWNER"
            - "LEASE"
            - "LINUX_IMMUTABLE"
            - "MAC_ADMIN"
            - "MAC_OVERRIDE"
            - "NET_ADMIN"
            - "NET_BROADCAST"
            - "SYS_BOOT"
            - "SYS_MODULE"
            - "SYS_NICE"
            - "SYS_PACCT"
            - "SYS_PTRACE"
            - "SYS_RAWIO"
            - "SYS_TIME"
            - "SYS_TTY_CONFIG"
            - "SYSLOG"
            - "WAKE_ALARM"
            - "SYS_RAWIO"

          add:
            # Default capabilities anyuid
            - "CHOWN"
            - "FOWNER"
            - "SETPCAP"
            - "SETFCAP"
            - "SETUID"
            - "SETGID"
            - "DAC_OVERRIDE"
            - "NET_BIND_SERVICE"
            - "KILL"

            # No default capabilities
            - "SYS_ADMIN"
            - "SYS_RESOURCE"
            - "MKNOD"
      command: ["/usr/sbin/init"]
      args:
        # - exit-on-finished
        - no-exit
        - ipa-server-install
        - -U
        # - --hostname
        # - poc-003.apps.permanent.idmocp.lab.eng.rdu2.redhat.com
        - --realm
        - APPS.PERMANENT-47.IDMOCP.LAB.ENG.RDU2.REDHAT.COM
        - --no-ntp
        - --no-sshd
        - --no-ssh
        - --no-dns
        - --verbose
      volumeMounts:
        - name: scripts
          mountPath: /opt/poc-003
        - name: data
          mountPath: /data
        - name: systemd-run-rpcbind
          mountPath: /run/rpcbind
        - name: systemd-tmp
          mountPath: /tmp
        - name: systemd-sys
          mountPath: /sys
          readOnly: true
        - name: systemd-sys-fs-selinux
          mountPath: /sys/fs/selinux
          readOnly: true
        - name: systemd-sys-firmware
          mountPath: /sys/firmware
          readOnly: true
        - name: systemd-sys-kernel
          mountPath: /sys/kernel
          readOnly: true

  volumes:
    - name: data
      emptyDir: {}
    - name: scripts
      configMap:
        name: poc-003
        items:
          - key: "init-container-uuid.sh"
            path: "init-container-uuid.sh"
            mode: 0777
          - key: "init-uid-gid-base.sh"
            path: "init-uid-gid-base.sh"
            mode: 0777
    # https://github.com/containers/podman/issues/2996
    #
    # And from: https://systemd.io/CONTAINER_INTERFACE/
    # Make sure to pre-mount /proc/, /sys/, and /sys/fs/selinux/ before
    # invoking systemd, and mount /proc/sys/, /sys/, and /sys/fs/selinux/
    # read-only in order to prevent the container from altering the host
    # kernel’s configuration settings. (As a special exception, if your
    # container has network namespaces enabled, feel free to make
    # /proc/sys/net/ writable). systemd and various other subsystems (such
    # as the SELinux userspace) have been modified to behave accordingly
    # when these file systems are read-only. (It’s OK to mount /sys/ as
    # tmpfs btw, and only mount a subset of its sub-trees from the real
    # sysfs to hide /sys/firmware/, /sys/kernel/ and so on. If you do that,
    # make sure to mark /sys/ read-only, as that condition is what systemd
    # looks for, and is what is considered to be the API in this context.)
    - name: systemd-sys
      hostPath:
        path: /sys
        type: DirectoryOrCreate
    - name: systemd-sys-fs-selinux
      hostPath:
        path: /sys/fs/selinux
        type: Directory
    - name: systemd-sys-firmware
      hostPath:
        path: /sys/firmware
        type: Directory
    - name: systemd-sys-kernel
      hostPath:
        path: /sys/kernel
        type: Directory
    - name: systemd-var-run
      emptyDir:
        medium: "Memory"
    - name: systemd-var-dirsrv
      emptyDir:
        medium: "Memory"

    # ----------------------------

    - name: systemd-run-rpcbind
      emptyDir:
        medium: "Memory"

    - name: systemd-tmp
      emptyDir:
        medium: "Memory"
    - name: systemd-var-lib-journal
      emptyDir: {}
