incubator/003-scc-and-caps/config/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: poc-003
  labels:
    app: poc-003
spec:
  selector:
    app: poc-003
  ports:
    - name: http-tcp
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https-tcp
      port: 443
      targetPort: 443
      protocol: TCP
    - name: kerberos-tcp
      port: 88
      targetPort: 88
      protocol: TCP
    - name: kerberos-udp
      port: 88
      targetPort: 88
      protocol: UDP

    - name: kerberos-adm-tcp
      port: 749
      targetPort: 749
      protocol: TCP
    - name: kerberos-adm-udp
      port: 749
      targetPort: 749
      protocol: UDP
