incubator/003-scc-and-caps/config/route.yaml
---
apiVersion: v1
kind: Route
metadata:
  name: poc-003
  labels:
    app: poc-003
spec:
  host: poc-003
  to:
    kind: Service
    name: poc-003
